--- a/ACM/学习笔记.md
+++ b/ACM/学习笔记.md
@@ -122,7 +122,7 @@ ll ex_gcd(ll a, ll b, ll& x, ll& y)//返回值为gcd(a,b)
 	{
 		x = 1;
 		y = 0;
-	return a;
+		return a;
 	}
 	ll d = ex_gcd(b, a % b, x, y);
 	ll t = x;
@@ -643,6 +643,8 @@ ll ex_BSGS(ll a, ll n, ll p)//可以处理gcd(a,p)!=1的情况
 ```
 
 ### 二次剩余（Cipolla）
+
+<img src="学习笔记.assets/image-20231014202850864.png" alt="image-20231014202850864" style="zoom:67%;" />
 
 ```c++
 ll MOD = 7;
@@ -1849,7 +1851,7 @@ while (r - l > EPS)
 {
 	db mid = (l + r) / 2;
 	double fl = fun(v, n, mid - EPS), fr = fun(v, n, mid + EPS);
-	if (fl < fr)
+	if (fl < fr)//求极大或极小修改这个就行
 		l = mid; // 这里不写成mid - eps，防止死循环；可能会错过极值，但在误差范围以内所以没关系
 	else
 		r = mid;
@@ -1865,4 +1867,6 @@ while (r - l > EPS)
 ```c++
 vector<type>().swap(v)
 ```
+
+
 
