--- a/操作系统/课后问题回答.md
+++ b/操作系统/课后问题回答.md
@@ -12,13 +12,13 @@
 
 ②增加内存利用率，可以为小应用分配更小的页面
 
-③更充分利用TLB空间（因为页面大小更小了）
-
 ##### 缺：
 
 ①同样的应用会占用更多页面，若缺页也会导致需要更多次访问磁盘来装入页面
 
 ②页面数量增多，因此页表空间会增大，从而占用更多的内核空间（内存）
+
+③减小了TLB命中的次数
 
 #### 3)  设置为更大：
 
